syntax = "proto3";

option csharp_namespace = "GrpcFileStorage";

package GrpcFileStorage;


service Endpoint {

  rpc Upload (stream FileUploadChunk) returns (FileKey);

  rpc Download (FileKey) returns (stream FileChunk);

  rpc Update (FileInfo) returns (Empty);

  rpc Delete (FileKey) returns (Empty);

  rpc GetInfo (stream FileKey) returns (stream FileInfo); 

}


message FileUploadChunk {
  bytes content = 1;
  string name = 2;
  string metadata = 3;
}

message FileChunk {
  bytes content = 1;
}

message FileKey {
  string id = 1;
}

message FileInfo {
  string id = 1;
  string name = 2;
  string metadata = 3;
  int64 length = 4;
}

message Empty {
}
